fix: fix content overflow in header section

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
 
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
 
     border: 1px solid red;
 
@@ -26,9 +26,12 @@ header {
 }
 .header-top,
 .header-bottom {
+    flex-shrink: 1;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 2rem;
 }
 .user-menu,
 .header-bottom > .user-info {
@@ -37,13 +40,16 @@ header {
     gap: 1rem;
 }
 .header-top > .search {
+    flex: 1;
+    max-width: 500px;
+
     display: flex;
     align-items: center;
     gap: 1rem;
 }
 input {
     padding: 0.8rem;
-    width: 500px;
+    width: 100%;
 }
 .actions button {
     padding: 0.5rem 0.8rem;
